--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <!-- Meta Tags for SEO -->
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://pak234-game-apk.vercel.app/">
+    <link rel="canonical" href="https://pak234-game-apk-real-money-win.onrender.com/">
     
     <title>Pak234 Game APK: Win Real Money on Your Phone</title>
     <meta name="description" content="Download the Pak234 Game APK for real cash games. Safe, fun, and exciting rewards on your mobile. Play to win today!">
